--- a/assets/index.html
+++ b/assets/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -20,6 +19,7 @@
     <link rel="stylesheet" href="src/styles/media-query.css" />
     <link rel="stylesheet" href="src/styles/main-content.css" />
     <link rel="stylesheet" href="src/styles/sidebar-footer.css" />
+    <script src="https://kit.fontawesome.com/ac70e00d4d.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
