--- a/assets/index.html
+++ b/assets/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Imersão Alura</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/styles/style.css">
     <link
       rel="shortcut icon"
       href="img/incons/favicon.png"
