--- a/assets/index.html
+++ b/assets/index.html
@@ -126,7 +126,7 @@
                 <!-- CARD 1 -->
                 <a href="" class="cards">
                   <div class="cards card1">
-                    <img src="./src/assets/playlist/1.jpeg" alt="" />
+                    <img src="img/playlist/1.jpeg" alt="" />
                     <span>Boas festas</span>
                   </div>
                 </a>
@@ -134,7 +134,7 @@
                 <!-- CARD 2 -->
                 <a href="" class="cards">
                   <div class="cards card2">
-                    <img src="./src/assets/playlist/2.png" alt="" />
+                    <img src="img/playlist/2.png" alt="" />
                     <span>Feitos para você</span>
                   </div>
                 </a>
@@ -142,7 +142,7 @@
                 <!-- CARD 3 -->
                 <a href="" class="cards">
                   <div class="cards card3">
-                    <img src="./src/assets/playlist/3.jpeg" alt="" />
+                    <img src="img/playlist/3.jpeg" alt="" />
                     <span>Lançamentos</span>
                   </div>
                 </a>
@@ -150,7 +150,7 @@
                 <!-- CARD 4 -->
                 <a href="" class="cards">
                   <div class="cards card4">
-                    <img src="./src/assets/playlist/4.jpeg" alt="" />
+                    <img src="img/playlist/4.jpeg" alt="" />
                     <span>Creators</span>
                   </div>
                 </a>
@@ -158,7 +158,7 @@
                 <!-- CARD 5 -->
                 <a href="" class="cards">
                   <div class="cards card5">
-                    <img src="./src/assets/playlist/5.jpeg" alt="" />
+                    <img src="img/playlist/5.jpeg" alt="" />
                     <span>Música Latina</span>
                   </div>
                 </a>
